--- a/2015-04-06-antiframework/slides.html
+++ b/2015-04-06-antiframework/slides.html
@@ -205,12 +205,12 @@ Foo.update({ items: ['bar', 'qux'] });
 
 	<div>there&rsquo;s a <a href="https://github.com/jspm/jspm-cli">tool</a> for that</div>
 
-	<div><pre><code>&ltscript&gt;System.import('<em>js/app</em>');&lt;/script&gt;
+	<div><pre><code>&lt;script&gt;System.import('<em>js/app</em>');&lt;/script&gt;
 
 # self-executing (sfx) bundles
 jspm --bundle-sfx <em>js/app bundle.js</em>
 
-&ltscript src="<em>bundle.js</em>"&gt;&lt;/script&gt;</code></pre></div>
+&lt;script src="<em>bundle.js</em>"&gt;&lt;/script&gt;</code></pre></div>
 
 	<div><a href="./my-todos/src">DEMO</a></div>
 
