--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
 	<ul>
 		<li><a href="http://shannonmoeller.github.io/talks/2015-04-06-antiframework/slides.html">Slides</a></li>
-		<li><a href="http://shannonmoeller.github.io/talks/2015-04-06-antiframework/notes.md">Notes</a></li>
-		<li><a href="https://github.com/shannonmoeller/talks/tree/master/2015-04-06-antiframework">Code</a></li>
+		<li><a href="https://github.com/shannonmoeller/talks/blob/master/2015-04-06-antiframework/notes.md">Notes</a></li>
+		<li><a href="https://github.com/shannonmoeller/talks/tree/master/2015-04-06-antiframework">Code on GitHub</a></li>
 	</ul>
 
 </body>
