Removed unused css block.

--- a/index.html
+++ b/index.html
@@ -81,10 +81,7 @@
 			margin-left: 0.5em;
 			padding-left: 0.5em;
 		}
-		.vrLg > * + * {
-			margin-top: 1em;
-		}
-		.vrSm > * + * {
+		.vr > * + * {
 			margin-top: 1em;
 		}
 	</style>
@@ -102,7 +99,7 @@
 </head>
 <body>
 
-	<div class="vrLg">
+	<div class="vr">
 		<h1>Shannon Moeller&rsquo;s Talks</h1>
 
 		<div class="bricks">
